// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-component when called in an existing project should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "Od34IIu/kM4od5aRZTT3BTjhYFM=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "qJnWpbM0djxX/iTkEr7sFyWoEKE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "cyiSAzblslLaM9FtFOxZflhDW5E=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                    HashedFile {
                      "hash": "0paD+lp3fCIv4J/d+YrJ6gkGSbo=",
                      "name": "readme.md",
                    },
                  ],
                  "hash": "celgq3+aR0rWl5L3cCnvB/wg6ls=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "TsDzWiJg1KIQhH3CaIEVyddcYzg=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "Cv5oF+Z8vxF9viGxNLk4dwcteUQ=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "nuAHzYim2iF+AyTRAG2zrXsAT0U=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "rsYYeJry1r6m6AsHdRcAxG0XXYs=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-component when called with a component name without hyphen should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "8jqQ8jMKUmsMHXqPJ+Va2FWnJI4=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "tS25lkQb7dlQXKxuykh6R0/CIPo=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "Zd4hjEzrsZbYZVpDMlMpAGTqMoI=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "3oooSGhdbEz9bFIW+jxQx8c9MmY=",
              "name": "atomic-nohypen",
            },
          ],
          "hash": "boOLM5KP1kIa8zd4AIHWVxgdIeA=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "hEnufsNhu8FP0hL5j7xyANoGZiI=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "drAB6sfCgLCvJpYsOWhOI2WeQo0=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-component when called with a valid component name should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "4i09LDgki1knJ++sEJ25B7OatIQ=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "YZICfNAhO7c4mopg1lRMvtn4zoc=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "GPCobV/2HmZJ0cpyuZQf9TQeVf8=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "MLwPXFxYzvMMusp514t4K8gYwoA=",
              "name": "valid-component-name",
            },
          ],
          "hash": "oDqOaFla4zXrVE3QlqWTjupRKvM=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "vPN008UEclaaaMIBJOKoziQvveE=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "aqaEJa1Z0nlmXONlKXzribh5aW4=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-component when called without any args should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "NfYhjfT2zx1gJGPJQcG3GGx4+9U=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "sample-component.css",
                    },
                    HashedFile {
                      "hash": "5oFqFve0WaOV3g/ptfVo98a5B4Q=",
                      "name": "sample-component.tsx",
                    },
                  ],
                  "hash": "65UuO8iiPnNRHZur5KT+HoQqFCw=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "C1lUixYy5PqFPChCSEf4u1O+KiE=",
              "name": "sample-component",
            },
          ],
          "hash": "EJ+DqRDmJ6t1nDn1YxXsmLUODH8=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "CuWH1YBEISTAmF0ImcUK5ol3MlU=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "JiBXf++8pCyD32T6TbrahzeALGE=",
  "name": "no-args",
}
`;
